[project]
name = "http-metadata-inventory-service"
version = "0.1.0"
description = ""
authors = [
    {name = "pranjal",email = "rktpranjal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[tool.poetry]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
